--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://tqcenglish.github.io'
 languageCode = 'zh-cn'
 title = '网关与PBX使用例子'
 theme = 'ananke'
